@@ -279,3 +279,10 @@ AjSharp.RunHost using WcfHostServer WcfHostClient instead RunServer
 2010-05-18
 HostedInvocationExpression
 Support of at <host> <callable> with <args> in Parser, with tests
+
+2010-05-19
+Support of at <host> <callable> with <args>; as command in Parser
+IsLocal in IHost
+Host.IsLocal is true, XxxHostClient.IsLocal is false
+Separate dictionaries for local and remote hosts in Machine
+IHost.RegisterHost, work in progress
